# markdown-anki-decks

./: .envrc  .gitignore  .pre-commit-config.yaml  .tool-versions  CHANGELOG.md  LICENSE.txt  README.md  ROADMAP.md  pyproject.toml
markdown_anki_decks/: cli.py  sync.py  utils.py
markdown_anki_decks/styles/: markdown.css  pygments-dark.css
testData/input/: custom-styles.css  deck-with-cloze.md  deck-with-custom-styles.md  deck-with-data-question.md  deck-with-image.md  deck-with-inline-code.md  deck-with-math.md  deck-with-missing-image.md  deck-with-missing-sound.md  deck-with-multiline-question.md  deck-with-repeated-css.md  deck-with-sound.md  deck-without-h1.md  deck.md  git.md  graphql.md  inline-code-styles.css  python.md  repeated-css-styles.css  web-development.md
testData/output/: deck-with-image.apkg  deck-without-h1.apkg  deck.apkg
tests/: test_markdown_anki_decks.py
