[tool.poetry]
name = "markdown-anki-decks"
version = "0.1.0"
description = "A command line program to convert markdown files into anki decks."
authors = ["Luke Murray <lukepigeonmail@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/lukesmurray/markdown-anki-decks"
repository = "https://github.com/lukesmurray/markdown-anki-decks"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: Console",
    "Topic :: Text Processing :: Markup :: Markdown",
    "Topic :: Education"
]
exclude = ["textData/**/*"]

[tool.poetry.dependencies]
python = "^3.7.0"
genanki = "^0.10.1"
commonmark = "^0.9.1"
typer = "^0.3.2"
colorama = "^0.4.4"
shellingham = "^1.3.2"
beautifulsoup4 = "^4.9.3"

[tool.poetry.dev-dependencies]
pytest = "^4.6"
black = "^20.8b1"
flake8 = "^3.8.4"
commitizen = "^2.11.1"

[tool.poetry.scripts]
mdankideck = "markdown_anki_decks.cli:main"

[tool.commitizen]
version = "0.1.0"
version_files = [
    "pyproject.toml:version",
    "markdown_anki_decks/__init__.py",
]
bump_message = "release $current_version → $new_version [skip-ci]"
update_changelog_on_bump = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


