[tool.poetry]
name = "markdown-anki-decks"
version = "0.3.2"
description = "A command line program to convert markdown files into anki decks."
authors = ["Luke Murray <lukepigeonmail@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/lukesmurray/markdown-anki-decks"
repository = "https://github.com/lukesmurray/markdown-anki-decks"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: Console",
    "Topic :: Text Processing :: Markup :: Markdown",
    "Topic :: Education"
]
exclude = ["textData/**/*"]

[tool.poetry.dependencies]
python = "^3.7.0"
genanki = "^0.10.1"
typer = "^0.3.2"
colorama = "^0.4.4"
shellingham = "^1.3.2"
beautifulsoup4 = "^4.9.3"
Markdown = "^3.3.3"
python-frontmatter = "^0.5.0"

[tool.poetry.dev-dependencies]
pytest = "^4.6"
black = "^20.8b1"
flake8 = "^3.8.4"
commitizen = "^2.11.1"
pre-commit = "^2.9.3"
Pygments = "^2.7.3"
pygments-graphql = "^1.0.0"
mypy = "^0.812"

[tool.poetry.scripts]
mdankideck = "markdown_anki_decks.cli:main"

[tool.commitizen]
version = "0.3.2"
version_files = [
    "pyproject.toml:version",
    "markdown_anki_decks/__init__.py",
]
update_changelog_on_bump = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


