[tool.poetry]
name = "markdown-anki-decks"
version = "1.1.0"
description = "A command line program to convert markdown files into anki decks."
authors = ["Luke Murray <lukepigeonmail@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/lukesmurray/markdown-anki-decks"
repository = "https://github.com/lukesmurray/markdown-anki-decks"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Topic :: Text Processing :: Markup :: Markdown",
    "Topic :: Education"
]
exclude = ["textData/**/*"]

[tool.poetry.dependencies]
python = "^3.7.0"
genanki = "^0.13.0"
typer = "^0.4.0"
colorama = "^0.4.4"
shellingham = "^1.4.0"
beautifulsoup4 = "^4.10.0"
Markdown = "^3.3.6"
python-frontmatter = "^1.0.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"
black = "^22.1.0"
flake8 = "^3.8.4"
commitizen = "^2.21.2"
pre-commit = "^2.17.0"
Pygments = "^2.11.2"
pygments-graphql = "^1.0.0"
mypy = "^0.941"

[tool.poetry.scripts]
mdankideck = "markdown_anki_decks.cli:main"

[tool.commitizen]
version = "1.1.0"
version_files = [
    "pyproject.toml:version",
    "markdown_anki_decks/__init__.py",
]
update_changelog_on_bump = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


